package com.gary.factory.abs;

/**
 * @author gefengming
 * @date 17/5/21
 */
public interface Factory {

    public Product1 createProduct1();

    public Product2 createProduct2();

}
