package com.gary.factory.abs;

/**
 * @author gefengming
 * @date 17/5/21
 */
public class Product1_A implements Product1{
}
